--- a/resources/kjhs-2016.haml
+++ b/resources/kjhs-2016.haml
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /resources/kjhs/2016
+permalink: /resources/kjhs/2016/index.html
 ---
 
 %br= # Oh yes I did
@@ -8,17 +8,83 @@ permalink: /resources/kjhs/2016
 %section.text
   .markdown
     :markdown
-      # Welcome, career day students!
+      # Hey Wildcats!
 
-      Hey there KJHS student, thanks for dropping by. It was great to meet you
-      today! I hope you were inspired by all the career day presenters to forge
-      your own path in the world.
+      Welcome, and thanks for dropping by. It was great to meet you today! I
+      hope you were inspired by all the career day presenters to forge your own
+      path in the world. So you want to be a web or mobile developer?  Awesome!
+      Going to a university or technical school is a great start to a career in
+      programming and web development. I’ve included links to some great schools
+      at the bottom of the page. But on top of that, you’ve got to be a
+      self-starter and learn some things on your own. You can get started
+      learning now, for free, using the wealth of resources available on the
+      internet.
 
-      Here is a link to my slides: <https://github.com/philtr/kjhs-2016>
+      If you're looking for my slides, you can find them here:
+      <https://github.com/philtr/kjhs-2016>
 
       ## Other helpful links
 
-      Here are some helpful links if you're interested in a career in web development:
+      Here are some helpful links if you're interested in a career in web
+      development.
 
-        - CodeCademy - <https://www.codecademy.com>
+      ### Free resources:
+
+        - CodeCademy - <https://www.codecademy.com> - “Learn to code
+          interactively, for free.”
+        - Khan Academy – <https://www.khanacademy.org/> – “Khan Academy offers
+          practice exercises, instructional videos, and a personalized learning
+          dashboard that empower learners to study at their own pace in and
+          outside of the classroom. We tackle math, science, computer programming,
+          history, art history, economics, and more.”
+        - Try Ruby – <http://tryruby.org/> – 15 Minute introduction to
+          programming with the Ruby programming language.
+        - Stanford University: Developing iOS 8 Apps with Swift –
+          <https://itunes.apple.com/us/course/developing-ios-8-apps-swift/id961180099> –
+          There are also many other great computer science courses on iTunes U
+        - Cloud9 – <https://c9.io/> – Free online computing platform and code
+          editor.
+        - Mozilla Developer Network – <https://developer.mozilla.org/en-US/Learn> –
+          Free web development course from the creators of the Firefox web
+          browser.
+
+      ### Paid resources:
+
+      > These are great, but don't pay for them until you've exhausted the free
+        resourcess above.
+
+        - Codeschool – <https://www.codeschool.com/> – “Code School teaches web
+          technologies in the comfort of your browser with video lessons, coding
+          challenges, and screencasts.”
+        - Upcase - <https://thoughtbot.com/upcase/> - “For aspiring senior
+        developers looking for battle-tested best practices, a killer community,
+        and mentorship from the right people.”
+        - Treehouse - <https://teamtreehouse.com> - “Learn from over 1000 videos
+          created by expert teachers on web design, coding, business, and much
+          more.”
+        - Lynda.com – <http://www.lynda.com/> – “New skills. Improved skills.
+          Now. Learn technology, creative and business skills you can use today.”
+        - Udemy – <https://www.udemy.com/> – Crowd-sourced learning for just
+          about anything. Many times will have sales for an entire course for $20
+          (regularly $100-200)
+
+      ### Higher learning:
+
+      > Going to a university or technical school is a great start to a career
+        in programming and web development. I’ve included links to some great
+        schools at the bottom of the page. But on top of that, you’ve got to be
+        a self-starter and learn some things on your own. You can get started
+        learning now, for free, using the wealth of resources available on the
+        internet.
+
+        - Turing School of Software & Design – <http://turing.io/> – “Start with
+          passion, grit, and an aptitude for logic. Spend seven intense months
+          learning, collaborating, and building. Then emerge a production-ready
+          software developer.”
+        - UT Dallas: Computer Science – <http://cs.utdallas.edu/>
+        - Full Sail University – <http://www.fullsail.edu/> – “Full Sail
+          University offers campus and online degree programs that are designed
+          for the world of entertainment and media. Offering associate's,
+          bachelor's, and master's degrees, Full Sail's approach is centered on
+          real-world industry experience.”
 
