Clean up higher learning section
Copy and paste fail

--- a/resources/kjhs-2016.haml
+++ b/resources/kjhs-2016.haml
@@ -23,7 +23,7 @@ permalink: /resources/kjhs/2016/index.html
       If you're looking for my slides, you can find them here:
       <https://github.com/philtr/kjhs-2016>
 
-      ## Other helpful links
+      ## Some helpful links
 
       Here are some helpful links if you're interested in a career in web
       development.
@@ -35,8 +35,8 @@ permalink: /resources/kjhs/2016/index.html
         - Khan Academy – <https://www.khanacademy.org/> – “Khan Academy offers
           practice exercises, instructional videos, and a personalized learning
           dashboard that empower learners to study at their own pace in and
-          outside of the classroom. We tackle math, science, computer programming,
-          history, art history, economics, and more.”
+          outside of the classroom. We tackle math, science, computer
+          programming, history, art history, economics, and more.”
         - Try Ruby – <http://tryruby.org/> – 15 Minute introduction to
           programming with the Ruby programming language.
         - Stanford University: Developing iOS 8 Apps with Swift –
@@ -63,28 +63,35 @@ permalink: /resources/kjhs/2016/index.html
           created by expert teachers on web design, coding, business, and much
           more.”
         - Lynda.com – <http://www.lynda.com/> – “New skills. Improved skills.
-          Now. Learn technology, creative and business skills you can use today.”
+          Now. Learn technology, creative and business skills you can use
+          today.”
         - Udemy – <https://www.udemy.com/> – Crowd-sourced learning for just
-          about anything. Many times will have sales for an entire course for $20
-          (regularly $100-200)
+          about anything. Many times will have sales for an entire course for
+          $20 (regularly $100-200)
 
       ### Higher learning:
 
-      > Going to a university or technical school is a great start to a career
-        in programming and web development. I’ve included links to some great
-        schools at the bottom of the page. But on top of that, you’ve got to be
-        a self-starter and learn some things on your own. You can get started
-        learning now, for free, using the wealth of resources available on the
-        internet.
+      Technical Schools:
 
         - Turing School of Software & Design – <http://turing.io/> – “Start with
           passion, grit, and an aptitude for logic. Spend seven intense months
           learning, collaborating, and building. Then emerge a production-ready
           software developer.”
-        - UT Dallas: Computer Science – <http://cs.utdallas.edu/>
         - Full Sail University – <http://www.fullsail.edu/> – “Full Sail
           University offers campus and online degree programs that are designed
           for the world of entertainment and media. Offering associate's,
           bachelor's, and master's degrees, Full Sail's approach is centered on
           real-world industry experience.”
+
+      Universities:
+
+      > Watch out! Every school will try to tell you they have a great computer
+        science program. Don't take their word for it! Make sure you do research
+        to see how they actually stack up!
+
+        - Stanford University – <http://cs.stanford.edu>
+        - MIT – <http://cs.mit.edu>
+        - Carnegie Mellon University – <http://www.cs.cmu.edu>
+        - Rice – <http://www.cs.rice.edu>
+        - Local option: UT Dallas – <http://cs.utdallas.edu/>
 
