Update KJHS intro section

--- a/resources/kjhs-2016.haml
+++ b/resources/kjhs-2016.haml
@@ -8,25 +8,30 @@ permalink: /resources/kjhs/2016/index.html
 %section.text
   .markdown
     :markdown
-      # Hey Wildcats!
+      # Hey, Wildcats!
 
-      Welcome, and thanks for dropping by. It was great to meet you today! I
-      hope you were inspired by all the career day presenters to forge your own
-      path in the world. So you want to be a web or mobile developer?  Awesome!
-      Going to a university or technical school is a great start to a career in
-      programming and web development. I’ve included links to some great schools
-      at the bottom of the page. But on top of that, you’ve got to be a
-      self-starter and learn some things on your own. You can get started
-      learning now, for free, using the wealth of resources available on the
-      internet.
+    .intro
+      :markdown
+        Welcome, and thanks for dropping by. It was great to meet you today! I
+        hope you were inspired by all the presenters to forge your own path in
+        the world.
 
+  .markdown
+    :markdown
       If you're looking for my slides, you can find them here:
       <https://github.com/philtr/kjhs-2016>
 
+      _So you want to be a web or mobile developer?_ Awesome! Going to a
+      university or technical school is a great start to a career in programming
+      and web development. I’ve included links to some great schools at the
+      bottom of the page. But on top of that, you’ve got to be a self-starter
+      and learn some things on your own. You can get started learning now, for
+      free, using the wealth of resources available on the internet.
+
       ## Some helpful links
 
-      Here are some helpful links if you're interested in a career in web
-      development.
+      > Here are some helpful links if you're interested in a career in web
+        development.
 
       ### Free resources:
 
