Update KJHS links section and add #FridayHugs

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -13,6 +13,7 @@
 @import "components/contact";
 @import "components/errors";
 @import "components/footer";
+@import "components/gallery";
 @import "components/navigation";
 @import "components/posts";
 @import "components/projects";
