--- a/resources/kjhs-2016.haml
+++ b/resources/kjhs-2016.haml
@@ -18,8 +18,10 @@ permalink: /resources/kjhs/2016/index.html
 
   .markdown
     :markdown
-      If you're looking for my slides, you can find them here:
-      <https://github.com/philtr/kjhs-2016>
+      - **If you're looking for my slides, you can find them here:**
+        <https://github.com/philtr/kjhs-2016>
+
+      - **\#FridayHugs** are at the [bottom of this page](#fridayhug).
 
       _So you want to be a web or mobile developer?_ Awesome! Going to a
       university or technical school is a great start to a career in programming
@@ -78,6 +80,10 @@ permalink: /resources/kjhs/2016/index.html
 
       Technical Schools:
 
+      > These are two fantastic schools. If you're interested in how the
+        education differs from a traditonal university, please read the
+        ["Bootcamps vs. College"](#articles) article linked below.
+
         - Turing School of Software & Design – <http://turing.io/> – “Start with
           passion, grit, and an aptitude for logic. Spend seven intense months
           learning, collaborating, and building. Then emerge a production-ready
@@ -100,3 +106,48 @@ permalink: /resources/kjhs/2016/index.html
         - Rice – <http://www.cs.rice.edu>
         - Local option: UT Dallas – <http://cs.utdallas.edu/>
 
+      ### Articles
+
+      - ["Hire managers of one"][1] by Basecamp:
+
+        > A manager of one is someone who comes up with their own goals and
+          executes them. They don’t need heavy direction. They don’t need
+          daily check-ins. They do what a manager would do — set the tone,
+          assign items, determine what needs to get done, etc. — but they do
+          it by themselves and for themselves.
+
+      - ["Bootcamps vs. College"][2] by Ammon Bartram
+
+        > We’ve found bootcamp grads as a group to be better than college grads
+          at web programming and writing clean, modular code, and worse at
+          algorithms and understanding how computers work. All in all, we’ve had
+          roughly equivalent success working with the two groups.
+
+      [1]: https://signalvnoise.com/posts/1430-hire-managers-of-one
+      [2]: http://blog.triplebyte.com/bootcamps-vs-college
+
+      ### Other links
+
+      - [Oven Bits](http://ovenbits.com) - My employer
+      - [Vim](http://vim.org) - My text editor poison of choice
+
+  .markdown
+    :markdown
+      ## #FridayHug
+
+  .gallery
+    .gallery-item
+      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug1.jpg %}" }
+        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug1.jpg %}" }
+    .gallery-item
+      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug2.jpg %}" }
+        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug2.jpg %}" }
+    .gallery-item
+      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug3.jpg %}" }
+        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug3.jpg %}" }
+    .gallery-item
+      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug4.jpg %}" }
+        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug4.jpg %}" }
+    .gallery-item
+      %a{ href: "{% asset_path resources/kjhs/2016/hugs/original/hug5.jpg %}" }
+        %img{ src: "{% asset_path resources/kjhs/2016/hugs/thumb/hug5.jpg %}" }
