Add Pragmatic studio link

--- a/resources/kjhs-2016.haml
+++ b/resources/kjhs-2016.haml
@@ -66,6 +66,8 @@ permalink: /resources/kjhs/2016/index.html
         - Upcase - <https://thoughtbot.com/upcase/> - “For aspiring senior
         developers looking for battle-tested best practices, a killer community,
         and mentorship from the right people.”
+        - Pragmatic Studio - <https://pragmaticstudio.com> -  “Top developer
+          training from the folks who wrote the books”
         - Treehouse - <https://teamtreehouse.com> - “Learn from over 1000 videos
           created by expert teachers on web design, coding, business, and much
           more.”
