--- a/resources/kjhs-2016.haml
+++ b/resources/kjhs-2016.haml
@@ -7,6 +7,10 @@ permalink: /resources/kjhs/2016/index.html
 
 %section.text
   .markdown
+    %p
+      %time{ datetime: "2015-05-20 9:15:00 -0500" }
+        May 20, 2016
+
     :markdown
       # Hey, Wildcats!
 
@@ -64,8 +68,8 @@ permalink: /resources/kjhs/2016/index.html
           technologies in the comfort of your browser with video lessons, coding
           challenges, and screencasts.”
         - Upcase - <https://thoughtbot.com/upcase/> - “For aspiring senior
-        developers looking for battle-tested best practices, a killer community,
-        and mentorship from the right people.”
+          developers looking for battle-tested best practices, a killer
+          community, and mentorship from the right people.”
         - Pragmatic Studio - <https://pragmaticstudio.com> -  “Top developer
           training from the folks who wrote the books”
         - Treehouse - <https://teamtreehouse.com> - “Learn from over 1000 videos
@@ -136,6 +140,8 @@ permalink: /resources/kjhs/2016/index.html
   .markdown
     :markdown
       ## #FridayHug
+
+      It's Friday! <http://fridayhug.com>
 
   .gallery
     .gallery-item
