--- a/_assets/stylesheets/components/_gallery.scss
+++ b/_assets/stylesheets/components/_gallery.scss
@@ -3,5 +3,10 @@
 
   .gallery-item {
     @include span-columns(5 of 11); // ¯\_(ツ)_/¯
+    margin-bottom: 1em;
+  }
+
+  .gallery-item img {
+    border-radius: 5px;
   }
 }
