Update to Jekyll 3.1 and Remove “Notes Link”
Last blog post was written 18 months ago. I don’t
want to highlight stale content. Old posts are still
available and I have no intention of removing them.

There’s also a link added to a notes listing on the
about page.

Cheers!

:love:,
@philtr

--- a/_assets/stylesheets/components/_contact.scss
+++ b/_assets/stylesheets/components/_contact.scss
@@ -1,6 +1,7 @@
 section.contact {
   @include outer-container;
   margin-bottom: 3em;
+  margin-top: 3em;
 
   .form-group {
     @include media($large-screen-up) {
