--- a/about.haml
+++ b/about.haml
@@ -1,4 +1,5 @@
 ---
+title: About Me
 layout: default
 ---
 
@@ -14,25 +15,27 @@ layout: default
         check out&mdash;we have free pizza!
 
     :markdown
-      I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org) for students in
-      7th-12th grade. I apologize in advance for the fart jokes.
+      I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org)
+      for students in 7th-12th grade. I apologize in advance for the fart jokes.
 
-      On this site, you’ll find an assortment of posts about
-      programming, technology, Christianity, food, and life in general.
+      I occasionally [write an assortment of notes](/notes/) on programming,
+      technology, Christianity, food, and life in general. I don't really
+      think they're any good, so I don't link to them from the main site
+      navigation.
 
       The tech stack for this website includes:
 
-        * [Ruby](https://www.ruby-lang.org/), [Jekyll](http://jekyllrb.com), & [Sass](http://sass-lang.com/) to generate the site
-        * [Bootstrap](http://getbootstrap.com) and [Font Awesome](http://fontawesome.io) because I'm too lazy to do it myself
+        * [Jekyll](http://jekyllrb.com) for generating the site
+        * [Sass](http://sass-lang.com/) for coherent styles
         * [Turbolinks](https://github.com/rails/turbolinks) for speedy page loads and client-side caching
         * [s3_website](https://github.com/laurilehmijoki/s3_website) to deploy it to:
           * [Amazon S3](http://aws.amazon.com/s3/) for static asset hosting
           * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) as a distribution network for super-fast responses
-        * [CircleCI](https://circleci.com) for continuous deployment
 
       The type should be set in [your system UI font][system-ui].
 
         [system-ui]: http://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
+
 
       I also exist elsewhere on the internet:
 
