--- a/contact/index.haml
+++ b/contact/index.haml
@@ -1,7 +1,13 @@
 ---
+title: Contact
 layout: default
 ---
 
+%section.text
+  .intro
+    :markdown
+      I try to respond to email within 48 hours. You can use the contact form
+      below, or get in touch directly: <{{ site.email }}>.
 
 %section.contact
   .contact
@@ -20,7 +26,3 @@ layout: default
 
       .form-group#submit
         %button.btn.btn-primary{ type: "submit" } Say Hello
-
-%section.text
-  :markdown
-    Or get in touch directly: <p@rdln.net>.
