--- a/about.haml
+++ b/about.haml
@@ -7,21 +7,23 @@ layout: default
   .markdown
     .intro
       :markdown
-        Hi, there! I'm a Ruby developer baking up awesome digital treats at [Oven
-        Bits](http://ovenbits.com) in Dallas. I'm not interested in freelance work,
-        but feel free to take a look at my [open source projects](/projects/). I
-        co-organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of Fort
-        Worth, which you (if you're located in the area) should definitely come it
-        check out&mdash;we have free pizza!
+        Hi, there! I'm a full-stack developer baking up awesome digital treats
+        at [Oven Bits](http://ovenbits.com) in Dallas. I'm not interested in
+        freelance work, but feel free to take a look at my [open source
+        projects][github]. I co-organize [Ruby FTW](http://rubyftw.org), the
+        Ruby enthuisast group of Fort Worth, which you (if you're located in the
+        area) should definitely come it check out&mdash;we have free pizza!
+
+        [github]: https://github.com/philtr
+
+        I occasionally [write a note or two](/notes/) on topics I'm passionate
+        about. I'm also the youth director at [Burleson Bible
+        Church](http://burlesonbible.org) for students in 7th-12th grade. I
+        apologize in advance for the fart jokes.
 
     :markdown
-      I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org)
-      for students in 7th-12th grade. I apologize in advance for the fart jokes.
 
-      I occasionally [write an assortment of notes](/notes/) on programming,
-      technology, Christianity, food, and life in general. I don't really
-      think they're any good, so I don't link to them from the main site
-      navigation.
+      ---
 
       The tech stack for this website includes:
 
@@ -36,6 +38,7 @@ layout: default
 
         [system-ui]: http://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
 
+      ---
 
       I also exist elsewhere on the internet:
 
