So tired of contact form spam

--- a/about.haml
+++ b/about.haml
@@ -22,7 +22,6 @@ layout: default
         apologize in advance for the fart jokes.
 
     :markdown
-
       ---
 
       The tech stack for this website includes:
@@ -46,3 +45,9 @@ layout: default
         * "Designs" on [Dribbble](http://dribbble.com/philtr)
         * Tweets on [Twitter](http://twitter.com/philtr)
         * Bad food pictures on [Instagram](https://instagram.com/philtr)
+
+      ---
+
+      **Say hello:**  I try to respond to email within 48 hours. Feel free to
+      get in touch directly: <{{ site.email }}>.
+
