Don't remove list styles for post body

--- a/_assets/stylesheets/main.sass
+++ b/_assets/stylesheets/main.sass
@@ -56,17 +56,17 @@ hr
     margin: 0 auto
 
 .posts
-  ul
+  ul.posts-list
     list-style-type: none
     padding: 0
     line-height: 2
 
-  li small
-    clear: left
-    color: #b9b6b0
-    float: left
-    text-transform: uppercase
-    width: 11rem
+    li small
+      clear: left
+      color: #b9b6b0
+      float: left
+      text-transform: uppercase
+      width: 11rem
 
   .post-title, .post-title a
     color: #41323f
