Putting style link in the body still blocks render

--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -8,12 +8,12 @@
 
     <link href="{{ site.rss }}" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
 
+    {% css main %}
+
     {% include head/favicon.html %}
     {% include head/metadata.html %}
   </head>
   <body>
     {{ content }}
-
-    {% stylesheet main %}
   </body>
 </html>
