Full-stack developer => software engineer

--- a/about.haml
+++ b/about.haml
@@ -7,8 +7,8 @@ layout: default
   .markdown
     .intro
       :markdown
-        Hi, there! I'm a full-stack developer baking up awesome digital treats
-        at [Oven Bits](http://ovenbits.com) in Dallas. I'm not interested in
+        Hi, there! I'm a software engineer baking up awesome digital treats at
+        [Oven Bits](http://ovenbits.com) in Dallas. I'm not interested in
         freelance work, but feel free to take a look at my [open source
         projects][github]. I co-organize [Ruby FTW](http://rubyftw.org), the
         Ruby enthuisast group of Fort Worth, which you (if you're located in the
