--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,6 @@
 ---
 layout: master
-description: "Thoughts on web development and life in general by Phillip Ridlen, a Ruby developer in Dallas, Texas."
+description: "I'm a software engineer baking up awesome digital treats in Texas."
 ---
 
 .container.container-wide
@@ -8,7 +8,7 @@ description: "Thoughts on web development and life in general by Phillip Ridlen,
     <img src="{% asset_path phillipridlen.svg %}">
 
     %p.intro
-      I'm a full-stack developer baking up awesome digital treats at
+      I'm a software engineer baking up awesome digital treats at
       <a href="http://ovenbits.com">Oven Bits</a>.
 
 
