Don't use feedburner

--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -6,7 +6,7 @@
 
     <title>{% if page.title %}{{ page.title }} | {% endif %}Phillip Ridlen</title>
 
-    <link href="{{ site.rss }}" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
+    <link href="{{ site.url }}/atom.xml" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
 
     {% css main %}
 
