Break out styles so not all styles are rendered for every page

--- a/_assets/stylesheets/main.sass
+++ b/_assets/stylesheets/main.sass
@@ -14,6 +14,10 @@ a
   &:hover
     text-decoration: underline
 
+.header-link, .header-link a
+  color: #41323f
+  margin-bottom: 0
+
 img
   max-width: 100%
 
@@ -46,40 +50,6 @@ hr
 
 .intro
   font-size: 1.2rem
-
-.mister-ridlen
-  text-align: center
-
-  img
-    width: 40%
-
-ul.posts-list
-  list-style-type: none
-  padding: 0
-  line-height: 2
-
-  li small
-    color: #b9b6b0
-    display: block
-    margin-top: 1rem
-    text-transform: uppercase
-
-  @media screen and (min-width: 414px)
-    li small
-      clear: both
-      float: left
-      margin: 0
-      width: 11rem
-    li a
-      display: block
-      margin-left: 11rem
-
-.post-title, .post-title a
-  color: #41323f
-  margin-bottom: 0
-
-.post-date a
-  color: #b9b6b0
 
 figure.highlight, blockquote
   border-left: 3px solid #b9b6b0
