--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,8 @@
 ---
 layout: master
 description: "I'm a software engineer baking up awesome digital treats in Texas."
+styles:
+  - home
 ---
 
 .container.container-wide
