--- a/_includes/post/title.html
+++ b/_includes/post/title.html
@@ -1,4 +1,4 @@
-<h1 class="post-title">
+<h1 class="post-title header-link">
   {% if page.type == "link" %}
     <a href="{{ page.link.source }}">{{ page.title }}</a>
   {% else %}
