Allow pages to set an open graph image

--- a/_includes/head/metadata.html
+++ b/_includes/head/metadata.html
@@ -1,9 +1,14 @@
 <meta name="description" content="{{ page.description }}" />
 
 <meta property="og:title" content="{% if page.title %}{{ page.title }} | {% endif %}Phillip Ridlen" />
-<meta property="og:image" content="http://gravatar.com/avatar/a9afd72caf82c3b98c292a379f53228a?s=256" />
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 <meta property="og:description" content="{{ page.description }}" />
+
+{% if page.image %}
+  <meta property="og:image" content="{{ site.url }}{% asset_path '{{ page.image }}' %}" />
+{% else %}
+  <meta property="og:image" content="http://gravatar.com/avatar/a9afd72caf82c3b98c292a379f53228a?s=256" />
+{% endif %}
 
 <link rel="author" href="https://plus.google.com/102506368462184573833" />
 
