--- a/_assets/stylesheets/post-note-journal.sass
+++ b/_assets/stylesheets/post-note-journal.sass
@@ -1,7 +1,8 @@
+@import "shared"
+
 .post-note
-  font-family: "Iowan Old Style", Georgia, serif
+  font-family: $serif
   font-size: 1.2rem
-  line-height: 1.6
   -ms-hyphens: auto
   -webkit-hyphens: auto
   hyphens: auto
