--- a/_assets/stylesheets/post.sass
+++ b/_assets/stylesheets/post.sass
@@ -1,17 +1,5 @@
+@import "shared"
+
 .post-date a
-  color: #b9b6b0
-
-.post-content
-  img
-    border-radius: 2rem
-    height: auto
-    width: 100%
-
-    &.pixelated
-      image-rendering: -moz-crisp-edges
-      image-rendering:   -o-crisp-edges
-      image-rendering: -webkit-optimize-contrast
-      image-rendering: crisp-edges
-      -ms-interpolation-mode: nearest-neighbor
-
+  color: $dim-text-color
 
