Reorganize and update styles a bit
Adds a 'code' style for pages featuring source code

--- a/_assets/stylesheets/_shared.sass
+++ b/_assets/stylesheets/_shared.sass
@@ -1,11 +1,22 @@
 $primary-text-color:        #41323f
 $dim-text-color:            #b9b6b0
-$primary-accent-color:      #41A186
+$faded-text-color:          #eeedeb
+
+$primary-accent-color:      #41a186
+$secondary-accent-color:    #ab6748
+
+$primary-background-color:  #ffffff
+$dim-background-color:      #fbfaf8
 
 $sans-serif:                Avenir, "Segoe UI", sans-serif
 $serif:                     "Iowan Old Style", Georgia, serif
+$monospace:                 "SF Mono", Consolas, Menlo, monospace
 
-$base-font-size: 16px
-$breakpoint: 500px
+$font-size-base:            1rem
+$line-height-base:          1.6
+$line-height-expanded:      2.2
 
-$radius: 0.5rem
+$breakpoint:                35rem
+$radius:                    0.5rem
+$gutter:                    2rem
+
