--- a/_assets/stylesheets/posts/list.sass
+++ b/_assets/stylesheets/posts/list.sass
@@ -1,23 +1,27 @@
+@import "shared"
+
 section.posts
   h3
-    margin-top: 2rem
+    margin: $gutter 0 0 0
 
   h3:after
     content: " "
-    border-bottom: 1px solid transparentize(#b9b6b0, 0.75)
+    border-bottom: 1px solid $faded-text-color
     display: block
 
 ul.posts-list
   display: table
   list-style-type: none
+  margin: 0.5rem 0
   padding: 0
   position: relative
   width: 100%
 
   li
     display: table-row
+    line-height: $line-height-expanded
   li small
-    color: #b9b6b0
+    color: $dim-text-color
     display: table-cell
     line-height: 2
     width: 3.5rem
@@ -26,9 +30,10 @@ ul.posts-list
     width: auto
   li aside
     display: none
-    @media screen and (min-width: 500px)
-      color: #b9b6b0
+    @media screen and (min-width: $breakpoint)
+      color: $dim-text-color
       display: table-cell
+      padding-left: $gutter
       font-size: 0.75rem
       text-align: right
 
