--- a/_assets/stylesheets/posts/image.sass
+++ b/_assets/stylesheets/posts/image.sass
@@ -2,14 +2,16 @@
 
 .post-content
   img
-    border-radius: $radius
     height: auto
     width: 100%
+
+    &.framed
+      border-radius: $radius
 
   figcaption
     color: $dim-text-color
     font-family: $sans-serif
+    font-size: 1rem
     margin-top: -1rem
     text-align: center
-
 
