Adjust heading sizes

--- a/_assets/stylesheets/main.sass
+++ b/_assets/stylesheets/main.sass
@@ -12,6 +12,11 @@ body
   font-family: $sans-serif
   line-height: $line-height-base
 
+h1.brand
+  font-size: 1.5rem
+  @media screen and (min-width: $breakpoint)
+    font-size: 2rem
+
 a
   color: $primary-accent-color
   text-decoration: none
