--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -3,7 +3,7 @@ layout: bare
 ---
 
 <div>
-  <h1><a href="/">Phillip Ridlen</a></h1>
+  <h1 class="brand"><a href="/">Phillip Ridlen</a></h1>
   <div class="content">
     {{ content }}
   </div>
