Publish first Adam Asks post

--- a/_assets/stylesheets/posts.sass
+++ b/_assets/stylesheets/posts.sass
@@ -16,3 +16,10 @@
 .post-date a
   color: $dim-text-color
 
+.footnotes
+  border-top: 1px solid $faded-text-color
+  margin-top: $gutter
+  padding-top: $gutter
+
+  ol, ol li:first-child p
+    margin: 0
