--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -3,7 +3,12 @@ layout: bare
 ---
 
 <div>
-  <h1 class="brand"><a href="/">Phillip Ridlen</a></h1>
+  <h1 class="brand">
+    <a href="/">Phillip Ridlen</a>
+    {% for breadcrumb in layout.breadcrumbs %}
+      <span class="breadcrumb"><span class="caret">⟩</span> <a href="{{breadcrumb.link}}">{{ breadcrumb.title }}</a></span>
+    {% endfor %}
+  </h1>
   <div class="content">
     {{ content }}
   </div>
