A couple small style updates

--- a/_assets/stylesheets/posts/journal.sass
+++ b/_assets/stylesheets/posts/journal.sass
@@ -7,3 +7,8 @@
   -webkit-hyphens: auto
   hyphens: auto
 
+  h1, h2, h3, h4, h5, h6
+    font-family: $sans-serif
+
+  .intro
+    font-size: 1.4rem
