--- a/_assets/stylesheets/code.sass
+++ b/_assets/stylesheets/code.sass
@@ -15,6 +15,8 @@ code
   background: $dim-background-color
   border-radius: $radius
   margin: 0
+  max-width: 100%
+  overflow-x: auto
   padding: 0.5rem 1.5rem
 
   code
